Fix signup padding on mobile

--- a/wp-content/themes/eatshed/css/styles.css
+++ b/wp-content/themes/eatshed/css/styles.css
@@ -2974,9 +2974,8 @@ article img[height] {
       max-width: 100%;
       left: 0; } }
 
-@media screen and (max-width: 768px) {
-  .container {
-    padding: 0 1rem; } }
+.container {
+  padding: 0 1rem; }
 
 p {
   margin-bottom: 1.4em;
@@ -3574,9 +3573,12 @@ table tbody tr:hover {
     background-color: transparent;
     -webkit-background-size: 100% 100%;
             background-size: 100% 100%;
-    padding: 2rem 3rem; }
+    padding: 2rem 1rem;
+    text-align: center; }
     @media screen and (min-width: 769px) {
       .signup-block__container {
+        text-align: left;
+        padding: 2rem 3rem;
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
