--- a/wp-content/themes/eatshed/src/styles/base/_generic.scss
+++ b/wp-content/themes/eatshed/src/styles/base/_generic.scss
@@ -42,7 +42,5 @@ article {
 } 
 
 .container {
-	@include until($tablet) {
-		padding: 0 1rem;
-	}
+	padding: 0 1rem;
 }
